--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 url = https://www.binance.com/api/v1/klines?symbol=%s&interval=%s&startTime=%d&endTime=%d
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.url=jdbc:postgresql://database-1.clardewhkebn.us-east-1.rds.amazonaws.com:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=1234
